# RUSAK

./: .gitignore  Dockerfile  index.html  pyproject.toml  test.html
backend/: .env  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt  rusak.db  save_bd_backup1.db  test.db
backend/alembic/: env.py
backend/alembic/versions/: 3998df9331f3_engine_to_car_foreign_key_add.py  d5663a3e6f56_first_alimbic_migrations.py
backend/api/routers/: orders.py  test_article_router.py
backend/api/schemas/: schemas.py
backend/api_v1/crud/: car.py  create_engine.py  create_objects.py  create_objects_demo.py  demo_auto_crud.py  engine.py  order.py  photo.py  salone_member.py  salone_option.py  service.py  shassi.py  test.db  tire.py  wheelbase.py  zip.py
backend/api_v1/routers/: __init__.py  all.py  calculator.py  car.py  engine.py  orders.py  photo.py  salone_member.py  salone_option.py  service.py  shassi.py  tire.py  wheelbase.py  zip.py
backend/api_v1/schemas/: car.py  engine.py  order.py  schemas.py  (+7 more)
backend/db/: __init__.py  association_table.py  database.py  models.py
backend/utils/: calculate_price.py  datetime.py  photo.py  send_order_email.py
css/: index.css  models.css  style.css  test.css
frontend/: index.html
frontend/css/: index.css  models.css  style.css  test.css
frontend/js/: header.js  header2.js  models.js  slider.js  test.js  test2.js
html/грузо-пассажирские вездеходы/: k-8_gp_2.1_4x2,5.html  k-8_gp_2.2_4x2,5.html  k-8_gp_8.1_2,5x2,5.html  k-8_gp_8.2.html
html/грузовые вездиходы/: k-8_4x2,5.html  k-8_5x2,5.html
html/пассажирские вездеходы/: k-8_20.1.html  k-8_20.2.html  k-8_24.1.html  k-8_24.2.html
js/: header.js  header2.js  models.js  slider.js  test.js  test2.js  video.js
(+7 files in other folders)
